# routes/candidates.js
@@ -1,11 +1,12 @@
 const express = require('express');
 const router = express.Router();
 const candidatesController = require('../controllers/candidates');
+const ensureAuthenticated = require('../middleware/ensure-authenticated');
 
 router.get('/', candidatesController.getAll);
 router.get('/:id', candidatesController.getSingle);
-router.post('/', candidatesController.createCandidate);
-router.put('/:id', candidatesController.updateCandidate);     // Added this
-router.delete('/:id', candidatesController.deleteCandidate);  // Added this
+router.post('/', ensureAuthenticated, candidatesController.createCandidate);
+router.put('/:id', ensureAuthenticated, candidatesController.updateCandidate);
+router.delete('/:id', ensureAuthenticated, candidatesController.deleteCandidate);
 
 module.exports = router;
